fix: align item center

--- a/src/app/public/views/home/home.component.scss
+++ b/src/app/public/views/home/home.component.scss
@@ -4,7 +4,9 @@
 
 :host {
   max-width: $desktop;
-  align-self: center;
+  @media (min-width: $desktop) {
+    align-self: center;
+  }
 }
 
 .card {
